objects/Chat_Message__c/Chat_Message__c.object-meta.xml
<CustomObject>
    <label>Chat Message</label>
    <nameField>
        <label>Chat Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>