objects/Chat_Message__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conversation</label>
    <referenceTo>Chat_Conversation__c</referenceTo>
    <relationshipLabel>Chat Messages</relationshipLabel>
    <relationshipName>Chat_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>