objects/Chat_Message__c/fields/Is_Agent_Message__c.field-meta.xml
<CustomField>
    <fullName>Is_Agent_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agent Message</label>
    <type>Checkbox</type>
</CustomField>