objects/Chat_Message__c/fields/Sequence_ID__c.field-meta.xml
<CustomField>
    <fullName>Sequence_ID__c</fullName>
    <label>Sequence ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>